@@ -466,7 +466,10 @@
    <copyField source="sku*" dest="*_s"/>
    <copyField source="sku*" dest="*_dest_sub_s"/>
    <copyField source="sku*" dest="dest_sub_no_ast_s"/>
-     
+
+   <!-- test source glob that doesn't match any explicit or dynamic field -->
+   <copyField source="testing123_*" dest="text"/>
+  
  <!-- Similarity is the scoring routine for each document vs a query.
       A custom similarity may be specified here, but the default is fine
       for most applications.
